--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "countapi-js": "^1.0.2",
+    "jquery": "^3.7.0",
     "vue": "^3.3.2"
   },
   "devDependencies": {
